Project half part donw

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,10 @@
 .carousel-caption{
-    top: 50px;
+    top: 120px;
 } 
+
+.carousel-caption > p {
+    font-size: 20px;
+}
+.carousel-caption > p {
+    font-size: 18px;
+}
